# Amber-Launcher

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  manifest.json
Data/Launcher/Mods/davidsprites/: manifest.lua
Data/Launcher/Mods/davidsprites/Assets/: SFT.txt  david.lua
Data/Launcher/Mods/extramapicons/: manifest.lua
Data/Launcher/Mods/extramapicons/Assets/: xmapicons.ICONS.LOD
Data/Launcher/Mods/extramapicons/Dev/: mapicons.aseprite
Scripts/Launcher/: ConfigTweaks.lua  ConvertMusic.lua  CoreEvents.lua  DetectAndCopyGame.lua  DetectAndInstallMod.lua  Localisation.lua  MergeAndRename.lua  ModalMods.lua  ModalOptions.lua  ModalTools.lua  ModalUpdater.lua  RegistryTweaks.lua  _const.lua  _filesystem.lua  _main.lua
cmake/: toolchain_clang.cmake  toolchain_gcc.cmake  toolchain_mingw-w64.cmake
cmake/modules/: CheckLibUnwind.cmake  CheckPOSIX.cmake  UpdateBuildVersion.cmake
docs/: todo.md
include/: AmberLauncherCore.h  AmberLauncherGUI.h  version.h
include/commands/: archive.h  config.h  music.h  regedit.h
include/core/: apidef.h  appcore.h  command.h  common.h  luacommon.h  luainc.h  luastate.h  observer.h  opsys.h  stdint.h  vector.h
include/ext/: ini.h  minimp3.h  minimp3_ex.h  sha256.h  sha_types.h
src/AmberLauncherCore/: AmberLauncherCore.c
src/AmberLauncherCore/commands/: archive.c  config.c  music.c  regedit.c
src/AmberLauncherCore/core/: appcore.c  command.c  luacommon.c  luainc.c  luastate.c  observer.c  opsys.c  opsys.unix.c  opsys.win.c  vector.c
src/AmberLauncherCore/ext/: ini.c  lfs.c  miniz.c  sha256.c
src/AmberLauncherGUI/: AmberLauncherGUI.c  CMakeLists.txt  amberlaunchergui.c
src/AmberLauncherGUI/res/: Amber.manifest  logo.icns
src/AmberLauncherGUI/res/res_app/: strings.msg
tools/: generate_al_manifest.sh  generate_manifest.sh  generate_mod_manifest.sh  manifest.json  videoconvert.sh
